# apertium-aze

./: .gitattributes  .gitignore  Makefile.am  apertium-aze-1.0.pc.in  apertium-aze.aze.lexc  apertium-aze.aze.twol  apertium-aze.pc.in  configure.ac  modes.xml
.circleci/: config.yml  cov.sh
dev/: pos_categorized.ilkin.txt
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
tests/morphotactics/: Makefile
